# pygpmf-oz

./: .gitattributes  .gitignore  .readthedocs.yaml  GITHUB_ACTIONS_SETUP.md  INTEGRATION_GUIDE.md  MASTER_RELEASE_GUIDE.md  PYPI_UPLOAD_0_3_0.md  README.md  READTHEDOCS_SETUP.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0_3_0.md  REPOSITORY_UPDATE_SUMMARY.md  SECURITY.md  WEEK_1_2_PROGRESS.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/: DOCUMENTATION_INDEX.md  INTEGRATION_GUIDE.md  MASTER_RELEASE_GUIDE.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  WINDOWS_INSTALL.md  api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/archive/: EXECUTIVE_SUMMARY.md  FINAL_COVERAGE_REPORT.md  TWINE_FIX_RESEARCH.md  WEEK_1_2_FINAL_REPORT.md
docs/development/: DEVELOPMENT_ROADMAP.md  HERO11_SUPPORT.md  MIGRATION_NOTES.md  TASK5_COMPLETION_REPORT.md
docs/github-actions/: GITHUB_ACTIONS_PYPI_DEPLOYMENT.md  GITHUB_ACTIONS_QUICK_REFERENCE.md  GITHUB_ACTIONS_SETUP.md  READTHEDOCS_SETUP.md
docs/release/: PYPI_UPLOAD.md  RELEASE_CHECKLIST.md  RELEASE_IMPLEMENTATION_SUMMARY.md  RELEASE_NOTES_0_3_0.md
examples/: example_gps9_extract.py  example_gyro_extract.py
gpmf/: parse.py
journals/: 2026_01_12.md
tests/: test_advanced_parsing.py  test_advanced_plotting.py  test_cli.py  test_gps.py  test_integration.py  test_io.py  test_parse.py  test_plotting.py
