[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygpmf_oz"
dynamic = ["version"]
description = "A module to read GPMF data embedded in GoPro video files. Modernized fork with Python 3.9+ and Windows support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alexis Mignon", email = "alexis.mignon@gmail.com"},
]
maintainers = [
    {name = "ozand"},
]
keywords = ["gopro", "gpmf", "gps", "video", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "gpxpy>=1.5.0",
    "ffmpeg-python>=0.2.0",
    "geopandas>=0.12.0",
    "contextily>=1.3.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/ozand/pygpmf_oz"
Repository = "https://github.com/ozand/pygpmf_oz"
"Bug Tracker" = "https://github.com/ozand/pygpmf_oz/issues"

[project.scripts]
gpmf = "gpmf.__main__:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
